Add SO3 Matrix Type

--- a/output/Quadrotor.tex
+++ b/output/Quadrotor.tex
@@ -1,4 +1,6 @@
-
-Lag1: $R e_3 f+e_3 (-1.0) m g+\ddot{x} (-1.0) m = 0$
-Lag2: $M+J \dot{\Omega } (-1.0)+J \Omega \times \Omega  = 0$
-Geo: $(R \hatmap{\Omega } (-1.0)+\dot{R}) = 0$
+Quadrotor: Equations of Motion
+\begin{itemize}
+\item Lag1: $R e_3 f+e_3 (-1.0) m g+\ddot{x} (-1.0) m = 0$
+\item Lag2: $M+J \dot{\Omega } (-1.0)+J \Omega \times \Omega  = 0$
+\item Geo: $(R \hatmap{\Omega } (-1.0)+\dot{R}) = 0$
+\end{itemize}
