--- a/output/SphericalPendulum.tex
+++ b/output/SphericalPendulum.tex
@@ -1,3 +1,1 @@
-
-Lag1: $q\times u+q\times e3 (-1.0) m g l+q\times \ddot{q} (-1.0) m l l = 0$
-Geo: $\dot{q} (-1.0)+\omega \times q = 0$
+Lag1: $q\times u+q\times e3 (-1.0) m g l+q\times \ddot{q} (-1.0) m l l = 0$Geo: $\dot{q} (-1.0)+\omega \times q = 0$
