--- a/output/PointMass.tex
+++ b/output/PointMass.tex
@@ -1,2 +1,4 @@
-
-Lag1: $u+e_3 (-1.0) m g+\ddot{x} (-1.0) m = 0$
+PointMass: Equations of Motion
+\begin{itemize}
+\item Lag1: $u+e_3 (-1.0) m g+\ddot{x} (-1.0) m = 0$
+\end{itemize}
