Add working spherical pendulum and rigid pendulum variation linearization

--- a/output/VariationPointMass.tex
+++ b/output/VariationPointMass.tex
@@ -1,6 +1,6 @@
 VariationPointMass: Equations of Motion
 \begin{itemize}
-\item $\ddot{x} m+F (-1.0)$
-\item $\delta \ddot{x} m+\delta F (-1.0)$
-\item $[I m]\delta \ddot{x}+[I (-1.0)]\delta F+=0$
+\item $m \ddot{x}+(-1.0) F=0$
+\item $m \delta \ddot{x}+(-1.0) \delta F=0$
+\item $\Big[m I\Big]\delta \ddot{x}+\Big[(-1.0) I\Big]\delta F+=0$
 \end{itemize}
