--- a/output/VariationSphericalPendulum.tex
+++ b/output/VariationSphericalPendulum.tex
@@ -1,8 +1,21 @@
 VariationSphericalPendulum: Equations of Motion
 \begin{itemize}
-\item $\dot{\xi_{q}}\times q+\xi_{q}\times \omega_{q}\times q+(-1.0) \delta \omega_{q}\times q+\omega_{q}\times \xi_{q}\times q=0$
-\item $\Big[(-1.0) {(q)}^\times\Big]\dot{\xi_{q}}+\Big[((-1.0) {(\omega_{q}\times q)}^\times+(-1.0) {(\omega_{q})}^\times (-1.0) {(q)}^\times)\Big]\xi_{q}+\Big[(-1.0) (-1.0) {(q)}^\times\Big]\delta \omega_{q}+=0$
-\item $m l \dot{\omega_{q}}+(-1.0) q\times f+(-1.0) g m e_3=0$
-\item $m l \delta \dot{\omega_{q}}+m (0.0) \dot{\omega_{q}}+(-1.0) \xi_{q}\times q\times f+(-1.0) g m e_3+q\times \delta f+(-1.0) g (0.0) e_3=0$
-\item $\Big[(1.0) m l I\Big]\delta \dot{\omega_{q}}+\Big[(-1.0) (-1.0) {(f+(-1.0) g m e_3)}^\times (-1.0) {(q)}^\times\Big]\xi_{q}+\Big[O\Big]\delta \omega_{q}+\Big[(-1.0) {(q)}^\times I\Big]\delta f+=0$
+\item $(((\dot{\xi_{q}}\times q)+(\xi_{q}\times (\omega_{q}\times q)))+(-1.0)((\delta \omega_{q}\times q)+(\omega_{q}\times (\xi_{q}\times q))))=0$
+\item Variation Coefficients extracted
+\begin{gather}
+\Big[(-1.0) {(q)}^\times\Big]\dot{\xi_{q}}+\nonumber\\
+\Big[((-1.0) {((\omega_{q}\times q))}^\times+(-1.0) {(\omega_{q})}^\times (-1.0) {(q)}^\times)\Big]\xi_{q}+\nonumber\\
+\Big[(-1.0) (-1.0) {(q)}^\times\Big]\delta \omega_{q}+\nonumber\\
+=0
+\end{gather}
+\item $(m l\dot{\omega_{q}}+(-1.0)(q\times (f+(-1.0)gme_3)))=0$
+\item $((m l\delta \dot{\omega_{q}}+m (0.0)\dot{\omega_{q}})+(-1.0)(((\xi_{q}\times q)\times (f+(-1.0)gme_3))+(q\times (\delta f+(-1.0)g(0.0)e_3))))=0$
+\item Variation Coefficients extracted
+\begin{gather}
+\Big[(1.0) m l I\Big]\delta \dot{\omega_{q}}+\nonumber\\
+\Big[(-1.0) (-1.0) {((f+(-1.0)gme_3))}^\times (-1.0) {(q)}^\times\Big]\xi_{q}+\nonumber\\
+\Big[O\Big]\delta \omega_{q}+\nonumber\\
+\Big[(-1.0) {(q)}^\times\Big]\delta f+\nonumber\\
+=0
+\end{gather}
 \end{itemize}
